--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ h3 {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  margin-right: 14px;
 }
 .container .contactinfo .box .text {
   display: flex;
